Add thumbnail and export link to StructureData

--- a/aiida_graph_browser.ipynb
+++ b/aiida_graph_browser.ipynb
@@ -10,9 +10,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -31,15 +29,15 @@
     "\n",
     "import urlparse\n",
     "from collections import OrderedDict\n",
-    "from pprint import pformat"
+    "from pprint import pformat\n",
+    "import ase.io\n",
+    "from base64 import b64encode"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class StackEntry(ipw.VBox):\n",
@@ -91,6 +89,12 @@
     "        output += \"<li><b>description:</b> \"+self.node.description+\"</li>\"\n",
     "        output += \"<li><b>Attributes:</b>\"+pre_tag+pformat(self.node.get_attrs())+\"</pre></li>\"\n",
     "        output += \"<li><b>Extras:</b>\"+pre_tag+pformat(self.node.get_extras())+\"</pre></li>\"\n",
+    "        if self.node.__class__.__name__ == 'StructureData':\n",
+    "            structure_uuid = self.node.uuid\n",
+    "            structure_ase = self.node.get_ase()\n",
+    "            thumbnail = render_thumbnail(structure_ase)\n",
+    "            output += '<li><img width=\"100px\" src=\"data:image/png;base64,%s\" title=\"\"></li>' % thumbnail\n",
+    "            output += '<li><b>Structure:</b> <a href=\"../surfaces/export_structure.ipynb?uuid=%s\">Export Structure</a></li>'%structure_uuid\n",
     "        output += \"<li><b>Comments:</b>\"+pre_tag+pformat(self.node.get_comments())+\"</pre></li>\"\n",
     "        if isinstance(self.node, FolderData):\n",
     "            relpath = self.node.folder.abspath.replace(\"/project/\", \"\")\n",
@@ -109,9 +113,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tempfile import NamedTemporaryFile\n",
+    "def render_thumbnail(atoms):\n",
+    "    tmp = NamedTemporaryFile()\n",
+    "    ase.io.write(tmp.name, atoms, format='png') # does not accept StringIO\n",
+    "    raw = open(tmp.name).read()\n",
+    "    tmp.close()\n",
+    "    return b64encode(raw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def on_submit(b):\n",
@@ -136,9 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "stack_list = ipw.VBox()\n",
@@ -148,9 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# parse URL\n",
@@ -160,6 +173,13 @@
     "    inp_pk.value = querypart['pk'][0]\n",
     "    on_submit(None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
