--- a/aiida_graph_browser.ipynb
+++ b/aiida_graph_browser.ipynb
@@ -94,7 +94,7 @@
     "            structure_ase = self.node.get_ase()\n",
     "            thumbnail = render_thumbnail(structure_ase)\n",
     "            output += '<li><img width=\"100px\" src=\"data:image/png;base64,%s\" title=\"\"></li>' % thumbnail\n",
-    "            output += '<li><b>Structure:</b> <a href=\"../surfaces/export_structure.ipynb?uuid=%s\">Export Structure</a></li>'%structure_uuid\n",
+    "            output += '<li><b>Structure:</b> <a href=\"./export_structure.ipynb?uuid=%s\">Export Structure</a></li>'%structure_uuid\n",
     "        output += \"<li><b>Comments:</b>\"+pre_tag+pformat(self.node.get_comments())+\"</pre></li>\"\n",
     "        if isinstance(self.node, FolderData):\n",
     "            relpath = self.node.folder.abspath.replace(\"/project/\", \"\")\n",
