--- a/browse_workflows.ipynb
+++ b/browse_workflows.ipynb
@@ -49,7 +49,12 @@
     "qb = QueryBuilder()\n",
     "qb.append(WorkCalculation, filters={'extras': {'!has_key': 'resubmitted'}})\n",
     "for n in qb.all():\n",
-    "    n[0].set_extra('resubmitted', False)"
+    "    n[0].set_extra('resubmitted', False)\n",
+    "\n",
+    "qb = QueryBuilder()\n",
+    "qb.append(WorkCalculation, filters={'extras': {'!has_key': 'obsolete'}})\n",
+    "for n in qb.all():\n",
+    "    n[0].set_extra('obsolete', False)"
    ]
   },
   {
@@ -72,7 +77,7 @@
     "                layout=ipw.Layout(width=\"900px\"))\n",
     "age_range.observe(on_search_change, names='value')\n",
     "\n",
-    "state_select = ipw.RadioButtons(options=['new', 'succeed', 'failed', 'resubmitted', 'all'], description='State:')\n",
+    "state_select = ipw.RadioButtons(options=['new', 'succeed', 'failed', 'resubmitted', 'obsolete', 'all'], description='State:')\n",
     "state_select.observe(on_search_change, names='value')\n",
     "\n",
     "display(age_range, state_select)"
@@ -101,6 +106,7 @@
     "\n",
     "    elif state_select.value == 'succeed':\n",
     "        filters['extras.preprocess_successful'] = True\n",
+    "        filters['extras.obsolete'] = False\n",
     "\n",
     "    elif state_select.value == 'failed':\n",
     "        filters['extras.preprocess_successful'] = False\n",
@@ -108,6 +114,9 @@
     "\n",
     "    elif state_select.value == r'resubmitted':\n",
     "        filters['extras.resubmitted'] = True\n",
+    "\n",
+    "    elif state_select.value == r'obsolete':\n",
+    "        filters['extras.obsolete'] = True\n",
     "\n",
     "    else:\n",
     "        assert state_select.value == 'all'\n",
@@ -161,9 +170,14 @@
     "    resubmit_wf(wf_select.value)\n",
     "    update_search()\n",
     "\n",
-    "def on_toggle_resubstate_clicked(b):\n",
+    "def on_toggle_resubmitted_clicked(b):\n",
     "    state = wf_select.value.get_extra('resubmitted')\n",
     "    wf_select.value.set_extra('resubmitted', not state)\n",
+    "    update_search()\n",
+    "\n",
+    "def on_toggle_obsolete_clicked(b):\n",
+    "    state = wf_select.value.get_extra('obsolete')\n",
+    "    wf_select.value.set_extra('obsolete', not state)\n",
     "    update_search()\n",
     "\n",
     "def on_refresh_clicked(b):\n",
@@ -175,13 +189,16 @@
     "btn_resub = ipw.Button(description=\"Resubmit Workflow\")\n",
     "btn_resub.on_click(on_resub_clicked)\n",
     "\n",
-    "btn_toggleresub = ipw.Button(description=\"Toggle resubmitted\")\n",
-    "btn_toggleresub.on_click(on_toggle_resubstate_clicked)\n",
+    "btn_toggle_resub = ipw.Button(description=\"Toggle resubmitted\")\n",
+    "btn_toggle_resub.on_click(on_toggle_resubmitted_clicked)\n",
+    "\n",
+    "btn_toggle_obsolete = ipw.Button(description=\"Toggle obsolete\")\n",
+    "btn_toggle_obsolete.on_click(on_toggle_obsolete_clicked)\n",
     "\n",
     "refresh_btn = ipw.Button(description=\"Refresh\")\n",
     "refresh_btn.on_click(on_refresh_clicked)\n",
     "\n",
-    "btn_box = ipw.HBox([btn_kill, btn_resub, btn_toggleresub, refresh_btn])\n",
+    "btn_box = ipw.HBox([btn_kill, btn_resub, btn_toggle_resub, btn_toggle_obsolete, refresh_btn])\n",
     "display(btn_box)"
    ]
   },
@@ -261,8 +278,8 @@
     "        progress.layout.display = 'none' # hide progress bar\n",
     "        \n",
     "        # enable buttons if applicable\n",
-    "        failed = not node.get_extra(\"preprocess_successful\") if \"preprocess_successful\" in node.get_extras() else False\n",
-    "        btn_toggleresub.disabled = not failed\n",
+    "        failed = not node.get_extra(\"preprocess_successful\", False)\n",
+    "        btn_toggle_resub.disabled = not failed\n",
     "        btn_resub.disabled = not failed\n",
     "        btn_kill.disabled = node.is_sealed\n",
     "        btn_box.layout.display = None # show buttons"
