--- a/browse_workflows.ipynb
+++ b/browse_workflows.ipynb
@@ -30,11 +30,7 @@
     "from pprint import pprint\n",
     "from base64 import b64decode\n",
     "from collections import OrderedDict\n",
-    "from IPython.display import display, clear_output, Image\n",
-    "\n",
-    "# needed for resubmission\n",
-    "from apps.surfaces.nanoribbon.nanoribbonwork import NanoribbonWorkChain\n",
-    "from apps.surfaces.slab.slabwork import SlabGeoOptWorkChain"
+    "from IPython.display import display, clear_output, Image"
    ]
   },
   {
