Revert "remove import of workflows from surfaces app"
This reverts commit 1bf0cf2ea6683cdce76b1e942c4485fadec684cc.

--- a/browse_workflows.ipynb
+++ b/browse_workflows.ipynb
@@ -30,7 +30,11 @@
     "from pprint import pprint\n",
     "from base64 import b64decode\n",
     "from collections import OrderedDict\n",
-    "from IPython.display import display, clear_output, Image"
+    "from IPython.display import display, clear_output, Image\n",
+    "\n",
+    "# needed for resubmission\n",
+    "from apps.surfaces.nanoribbon.nanoribbonwork import NanoribbonWorkChain\n",
+    "from apps.surfaces.slab.slabwork import SlabGeoOptWorkChain"
    ]
   },
   {
