--- a/delete_node.ipynb
+++ b/delete_node.ipynb
@@ -88,8 +88,8 @@
     "}\n",
     "</style>\n",
     "<div id=\"dontdoit\">\n",
-    "    Deleting a node can break provenance and leave your database in a weird state.<br>\n",
-    "    Only continue if you are 100% sure that you know what you are doing! \n",
+    "    Deleting nodes can break provenance and create orphans.\n",
+    "    Continue only, if you are absolutely sure you know what you are doing! \n",
     "</div>\n",
     "'''\n",
     "display(HTML(html))\n",
