--- a/browse_workflows.ipynb
+++ b/browse_workflows.ipynb
@@ -40,6 +40,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find all names\n",
+    "qb = QueryBuilder()\n",
+    "qb.append(WorkCalculation,\n",
+    "          project=\"attributes._process_label\",\n",
+    "          filters={\n",
+    "              'attributes': {'!has_key': 'source_code'}\n",
+    "          }\n",
+    "          )\n",
+    "qb.order_by({WorkCalculation:{'ctime':'desc'}})\n",
+    "process_labels = []\n",
+    "for i in qb.iterall():\n",
+    "    if i[0] not in process_labels:\n",
+    "        process_labels.append(i[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -65,22 +86,44 @@
    },
    "outputs": [],
    "source": [
-    "def on_search_change(c):\n",
+    "def on_search(b):\n",
     "    update_search()\n",
     "\n",
-    "age_range = ipw.IntRangeSlider(\n",
-    "                value=[0, 7],\n",
-    "                min=0,\n",
-    "                max=100,\n",
-    "                step=1,\n",
-    "                description='age in days:',\n",
-    "                layout=ipw.Layout(width=\"900px\"))\n",
-    "age_range.observe(on_search_change, names='value')\n",
+    "style = {'description_width': '120px'}\n",
+    "dt_now = datetime.datetime.now()\n",
+    "dt_end = dt_now - datetime.timedelta(days=7)\n",
     "\n",
-    "state_select = ipw.RadioButtons(options=['new', 'succeed', 'failed', 'resubmitted', 'obsolete', 'all'], description='State:')\n",
-    "state_select.observe(on_search_change, names='value')\n",
+    "# Date range\n",
+    "date_start = ipw.Text(value='',\n",
+    "                      description='From: ',\n",
+    "                      style=style)\n",
     "\n",
-    "display(age_range, state_select)"
+    "date_end = ipw.Text(value='',\n",
+    "                    description='To: ')\n",
+    "\n",
+    "date_text = ipw.HTML(value='<p>Select the date range:</p>')\n",
+    "\n",
+    "age_selection = ipw.VBox([date_text, ipw.HBox([date_start, date_end])],\n",
+    "                         layout={'border': '1px solid #fafafa', 'padding': '1em'})\n",
+    "\n",
+    "# States\n",
+    "state_select = ipw.RadioButtons(options=['new', 'succeed', 'failed', 'resubmitted', 'obsolete', 'all'],\n",
+    "                                description='State:',\n",
+    "                                style=style,\n",
+    "                                layout={'border': '1px solid #fafafa', 'padding': '1em', 'width': '100%'})\n",
+    "\n",
+    "# Labels\n",
+    "drop_label = ipw.Dropdown(options=(['All',] + process_labels),\n",
+    "                          description='Process Label',\n",
+    "                          style=style)\n",
+    "\n",
+    "button_search = ipw.Button(description='Search',)\n",
+    "button_search.on_click(on_search)\n",
+    "display(age_selection,\n",
+    "        state_select,\n",
+    "        ipw.HBox([drop_label,],\n",
+    "                 layout={'border': '1px solid #fafafa', 'padding': '1em'}),\n",
+    "        button_search)"
    ]
   },
   {
@@ -94,16 +137,26 @@
     "def update_search():\n",
     "    wf_select.options = {\"Searching...\": False}\n",
     "    \n",
-    "    min_age = datetime.datetime.now() - datetime.timedelta(days=age_range.value[0])\n",
-    "    max_age = datetime.datetime.now() - datetime.timedelta(days=age_range.value[1])\n",
-    "\n",
+    "    try: # If the date range is valid, use it for the search\n",
+    "        start_date = datetime.datetime.strptime(date_start.value, '%Y-%m-%d')\n",
+    "        end_date = datetime.datetime.strptime(date_end.value, '%Y-%m-%d')\n",
+    "    except ValueError: # Otherwise revert to the standard (i.e. last 7 days)\n",
+    "        start_date = dt_end\n",
+    "        end_date = dt_now\n",
+    "        \n",
+    "        date_start.value = start_date.strftime('%Y-%m-%d')\n",
+    "        date_end.value = end_date.strftime('%Y-%m-%d')\n",
+    "        \n",
     "    filters = {}\n",
-    "    filters['ctime'] = {'and':[{'<=': min_age},{'>': max_age}]}\n",
+    "    filters['ctime'] = {'and':[{'<=': end_date},{'>': start_date}]}\n",
     "    filters['attributes'] = {'!has_key': 'source_code'} # exclude workfunctions\n",
     "    \n",
+    "    # States\n",
+    "    # # WorkCalculations which haven't been preprocessed\n",
     "    if state_select.value == 'new':\n",
     "        filters['extras'] = {'!has_key': 'preprocess_successful'}\n",
     "\n",
+    "    # # WorkCalculations which have been preprocessed\n",
     "    elif state_select.value == 'succeed':\n",
     "        filters['extras.preprocess_successful'] = True\n",
     "        filters['extras.obsolete'] = False\n",
@@ -120,6 +173,12 @@
     "\n",
     "    else:\n",
     "        assert state_select.value == 'all'\n",
+    "    \n",
+    "    # Label\n",
+    "    if drop_label.value == 'All':\n",
+    "        pass\n",
+    "    else:\n",
+    "        filters['attributes._process_label'] = drop_label.value\n",
     "    \n",
     "    qb = QueryBuilder()\n",
     "    qb.append(WorkCalculation, filters=filters)\n",
@@ -220,7 +279,7 @@
    },
    "outputs": [],
    "source": [
-    "wf_out = ipw.Output(layout=ipw.Layout(border=\"2px solid black\"))\n",
+    "wf_out = ipw.Output()\n",
     "display(wf_out)"
    ]
   },
