--- a/browse_workflows.ipynb
+++ b/browse_workflows.ipynb
@@ -43,17 +43,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%javascript\n",
+    "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
+    "    return false;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Find all names\n",
-    "qb = QueryBuilder()\n",
-    "qb.append(WorkCalculation,\n",
+    "qb_names = QueryBuilder()\n",
+    "qb_names.append(WorkCalculation,\n",
     "          project=\"attributes._process_label\",\n",
     "          filters={\n",
     "              'attributes': {'!has_key': 'source_code'}\n",
     "          }\n",
     "          )\n",
-    "qb.order_by({WorkCalculation:{'ctime':'desc'}})\n",
+    "qb_names.order_by({WorkCalculation:{'ctime':'desc'}})\n",
     "process_labels = []\n",
-    "for i in qb.iterall():\n",
+    "for i in qb_names.all():\n",
     "    if i[0] not in process_labels:\n",
     "        process_labels.append(i[0])"
    ]
@@ -90,8 +102,6 @@
     "    update_search()\n",
     "\n",
     "style = {'description_width': '120px'}\n",
-    "dt_now = datetime.datetime.now()\n",
-    "dt_end = dt_now - datetime.timedelta(days=7)\n",
     "\n",
     "# Date range\n",
     "date_start = ipw.Text(value='',\n",
@@ -139,24 +149,25 @@
     "    \n",
     "    try: # If the date range is valid, use it for the search\n",
     "        start_date = datetime.datetime.strptime(date_start.value, '%Y-%m-%d')\n",
-    "        end_date = datetime.datetime.strptime(date_end.value, '%Y-%m-%d')\n",
+    "        end_date = datetime.datetime.strptime(date_end.value, '%Y-%m-%d') + datetime.timedelta(hours=24)\n",
     "    except ValueError: # Otherwise revert to the standard (i.e. last 7 days)\n",
-    "        start_date = dt_end\n",
-    "        end_date = dt_now\n",
+    "        dt_now = datetime.datetime.now()\n",
+    "        dt_start = dt_now - datetime.timedelta(days=7)\n",
+    "\n",
+    "        date_start.value = dt_start.strftime('%Y-%m-%d')\n",
+    "        date_end.value = dt_now.strftime('%Y-%m-%d')\n",
     "        \n",
-    "        date_start.value = start_date.strftime('%Y-%m-%d')\n",
-    "        date_end.value = end_date.strftime('%Y-%m-%d')\n",
-    "        \n",
+    "        start_date = datetime.datetime.strptime(date_start.value, '%Y-%m-%d')\n",
+    "        end_date = datetime.datetime.strptime(date_end.value, '%Y-%m-%d') + datetime.timedelta(hours=24)\n",
+    "\n",
     "    filters = {}\n",
     "    filters['ctime'] = {'and':[{'<=': end_date},{'>': start_date}]}\n",
     "    filters['attributes'] = {'!has_key': 'source_code'} # exclude workfunctions\n",
     "    \n",
     "    # States\n",
-    "    # # WorkCalculations which haven't been preprocessed\n",
     "    if state_select.value == 'new':\n",
     "        filters['extras'] = {'!has_key': 'preprocess_successful'}\n",
     "\n",
-    "    # # WorkCalculations which have been preprocessed\n",
     "    elif state_select.value == 'succeed':\n",
     "        filters['extras.preprocess_successful'] = True\n",
     "        filters['extras.obsolete'] = False\n",
@@ -175,15 +186,13 @@
     "        assert state_select.value == 'all'\n",
     "    \n",
     "    # Label\n",
-    "    if drop_label.value == 'All':\n",
-    "        pass\n",
-    "    else:\n",
+    "    if drop_label.value != 'All':\n",
     "        filters['attributes._process_label'] = drop_label.value\n",
     "    \n",
     "    qb = QueryBuilder()\n",
     "    qb.append(WorkCalculation, filters=filters)\n",
     "    qb.order_by({WorkCalculation:{'ctime':'desc'}})\n",
-    "\n",
+    "    \n",
     "    options = OrderedDict()\n",
     "    for n in qb.iterall():\n",
     "        n = n[0]\n",
