no filtering by default

--- a/browse_workflows.ipynb
+++ b/browse_workflows.ipynb
@@ -118,12 +118,14 @@
     "\n",
     "# States\n",
     "state_select = ipw.RadioButtons(options=['new', 'succeed', 'failed', 'resubmitted', 'obsolete', 'all'],\n",
+    "                                value='all',\n",
     "                                description='State:',\n",
     "                                style=style,\n",
     "                                layout={'border': '1px solid #fafafa', 'padding': '1em', 'width': '100%'})\n",
     "\n",
     "# Labels\n",
     "drop_label = ipw.Dropdown(options=(['All',] + process_labels),\n",
+    "                          value='All',\n",
     "                          description='Process Label',\n",
     "                          style=style)\n",
     "\n",
