--- a/browse_workflows.ipynb
+++ b/browse_workflows.ipynb
@@ -22,7 +22,7 @@
     "    \n",
     "from aiida.orm.querybuilder import QueryBuilder\n",
     "from aiida.orm.calculation.work import WorkCalculation\n",
-    "from aiida.work.run import run, async, submit\n",
+    "from aiida.work.run import run, submit\n",
     "from aiida.common.links import LinkType\n",
     "\n",
     "import ipywidgets as ipw\n",
@@ -418,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
