add message for server endpoint
displays correct URLs both for running locally and when running
on aiida lab

--- a/rest.ipynb
+++ b/rest.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AiiDA Status"
+    "# AiiDA REST API"
    ]
   },
   {
@@ -20,7 +20,35 @@
     "from IPython.display import display, clear_output\n",
     "import ipywidgets as ipw\n",
     "import multiprocessing\n",
-    "from urllib2 import urlopen"
+    "from urllib2 import urlopen\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# server endpoint message\n",
+    "server_endpoint = '/api/v2/server/endpoints'\n",
+    "    \n",
+    "def get_external_url():\n",
+    "    try:\n",
+    "        # when running in AiiDA lab, return proxied URL\n",
+    "        domain = os.environ['AIIDALAB_DOMAIN'] \n",
+    "        user = os.environ['JUPYTERHUB_USER']\n",
+    "        base_url = 'https://{}/user/{}/proxy/5000'.format(domain, user)\n",
+    "    except KeyError:\n",
+    "        # when running locally, return direct URL\n",
+    "        base_url = 'http://127.0.0.1:5000'\n",
+    "    return base_url + server_endpoint\n",
+    "   \n",
+    "message = ipw.HTML(\n",
+    "    value=\"\"\"<div class='alert alert-box alert-info'>\n",
+    "    Connect to REST API externally via \n",
+    "    <a href='{url}' target='_blank'>{url}</a></div>\"\"\".format(url=get_external_url()),\n",
+    ")"
    ]
   },
   {
@@ -53,7 +81,6 @@
     "def start_rest():\n",
     "    ! verdi restapi\n",
     "\n",
-    "\n",
     "proc = None\n",
     "started = False\n",
     "\n",
@@ -61,7 +88,9 @@
     "btn_rest.on_click(toggle_btn)\n",
     "info_out = ipw.Output()\n",
     "\n",
-    "display(ipw.HBox([btn_rest, info_out]))"
+    "display(ipw.VBox(\n",
+    "    [message, ipw.HBox([btn_rest, info_out])]\n",
+    "))"
    ]
   },
   {
@@ -78,9 +107,9 @@
     "        print(\"GET {}\".format(btn_url.value))\n",
     "        response = urlopen(btn_url.value)\n",
     "        print(response.read())\n",
-    "\n",
+    "    \n",
     "btn_url = ipw.Text(layout=ipw.Layout(width='40%'),\n",
-    "                   value='http://127.0.0.1:5000/api/v2/server/endpoints')\n",
+    "                   value='http://127.0.0.1:5000' + server_endpoint)\n",
     "btn_test = ipw.Button(description=\"Test URL\")\n",
     "btn_test.on_click(request)\n",
     "\n",
@@ -107,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
