expose rest api via ngrok
expose aiida rest api using ngrok (for browsing via materials cloud or
for sharing with coworkers)

--- a/rest.ipynb
+++ b/rest.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -18,79 +18,166 @@
     "from __future__ import print_function\n",
     "\n",
     "from IPython.display import display, clear_output\n",
+    "from IPython.utils import io\n",
     "import ipywidgets as ipw\n",
     "import multiprocessing\n",
     "from urllib2 import urlopen\n",
-    "import os"
+    "import json\n",
+    "import os\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# server endpoint message\n",
-    "server_endpoint = '/api/v2/server/endpoints'\n",
-    "    \n",
-    "def get_external_url():\n",
-    "    try:\n",
-    "        # when running in AiiDA lab, return proxied URL\n",
-    "        domain = os.environ['AIIDALAB_DOMAIN'] \n",
-    "        user = os.environ['JUPYTERHUB_USER']\n",
-    "        base_url = 'https://{}/user/{}/proxy/5000'.format(domain, user)\n",
-    "    except KeyError:\n",
-    "        # when running locally, return direct URL\n",
-    "        base_url = 'http://127.0.0.1:5000'\n",
-    "    return base_url + server_endpoint\n",
-    "   \n",
-    "message = ipw.HTML(\n",
-    "    value=\"\"\"<div class='alert alert-box alert-info'>\n",
-    "    Connect to REST API externally via \n",
-    "    <a href='{url}' target='_blank'>{url}</a></div>\"\"\".format(url=get_external_url()),\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bad057a3440c49e08e3c900339bf97dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HBox(children=(Button(description=u'Start REST API', style=ButtonStyle()), Output()))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# starting/stopping AiiDA REST API\n",
-    "def toggle_btn(b):\n",
-    "    global started, proc\n",
-    "    started = not started\n",
+    "server_endpoint = '/api/v2'\n",
     "\n",
-    "    if started:\n",
-    "        btn_rest.description = \"Stop REST API\"\n",
-    "        #from aiida.cmdline.commands.restapi import Restapi        \n",
-    "        #proc = multiprocessing.Process(target=Restapi().run)\n",
-    "        proc = multiprocessing.Process(target=start_rest)\n",
-    "        with info_out:\n",
-    "            clear_output()\n",
-    "            print(\"Started REST API\")\n",
-    "            proc.start()\n",
-    "    else:\n",
-    "        btn_rest.description = \"Start REST API\"        \n",
-    "        proc.terminate()\n",
-    "        with info_out:\n",
-    "            clear_output()\n",
-    "            print(\"Stopped REST API\")\n",
+    "class Toggler:\n",
+    "    \"\"\"Provides start/stop button for a server.\"\"\"\n",
+    "    def __init__(self, name, start_cmd, url, wait_time=0.2):\n",
+    "        self.name = name\n",
+    "        self.start_cmd = start_cmd\n",
+    "        self.url = url\n",
     "\n",
-    "def start_rest():\n",
-    "    ! verdi restapi\n",
+    "        self.proc = None\n",
+    "        self.started = False\n",
+    "        self.start_label = \"Start {}\".format(name)\n",
+    "        self.stop_label = \"Stop {}\".format(name)\n",
+    "        self.wait_time = wait_time\n",
+    "        \n",
+    "        self.btn = ipw.Button(description=self.start_label)\n",
+    "        self.btn.on_click(self.toggle)\n",
+    "        self.info = ipw.Output()\n",
+    "        \n",
+    "    def toggle(self,b):\n",
+    "        self.started = not self.started\n",
+    "        \n",
+    "        if self.started:\n",
+    "            self.btn.description = self.stop_label\n",
+    "            self.proc = multiprocessing.Process(target=self.start)\n",
+    "            # hide output of server process\n",
+    "            with io.capture_output():\n",
+    "                self.proc.start()\n",
+    "            time.sleep(self.wait_time)\n",
+    "            with self.info:\n",
+    "                clear_output()\n",
+    "                print(\"Started {} at {}\".format(self.name, self.public_url))\n",
+    "        else:\n",
+    "            self.btn.description = self.start_label\n",
+    "            self.proc.terminate()\n",
+    "            with self.info:\n",
+    "                clear_output()\n",
+    "                print(\"Stopped {}\".format(self.name))\n",
     "\n",
-    "proc = None\n",
-    "started = False\n",
+    "    def start(self):\n",
+    "        cmd = self.start_cmd\n",
+    "        ! $cmd\n",
+    "        \n",
+    "    @property\n",
+    "    def hbox(self):\n",
+    "        return ipw.HBox([self.btn, self.info])\n",
+    "    \n",
+    "    @property\n",
+    "    def public_url(self):\n",
+    "        return self.url\n",
+    "    \n",
+    "     \n",
+    "rest_toggler = Toggler(name='REST API', start_cmd='verdi restapi', url='http://127.0.0.1:5000'+server_endpoint)\n",
     "\n",
-    "btn_rest = ipw.Button(description=\"Start REST API\")\n",
-    "btn_rest.on_click(toggle_btn)\n",
-    "info_out = ipw.Output()\n",
+    "display(rest_toggler.hbox)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2f4e7748b8ab4b60a8d8196a7dd0877c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>HBox</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "HBox(children=(Button(description=u'Start exposing', style=ButtonStyle()), Output()))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# on AiiDA Lab: provide external access via ngrok\n",
+    "ngrok = '/project/ngrok'\n",
+    "on_aiidalab = 'AIIDALAB_DOMAIN' in os.environ\n",
     "\n",
-    "display(ipw.VBox(\n",
-    "    [message, ipw.HBox([btn_rest, info_out])]\n",
-    "))"
+    "class NgrokToggler(Toggler):\n",
+    "    @property\n",
+    "    def public_url(self):\n",
+    "        # get public urls by querying ngrok api\n",
+    "        response = urlopen(self.url+'/api/tunnels')\n",
+    "        jdict = json.load(response)\n",
+    "        # 1st tunnel is http, 2nd tunnel is https\n",
+    "        url = jdict['tunnels'][1]['public_url']\n",
+    "        return url + server_endpoint\n",
+    "    \n",
+    "if on_aiidalab:\n",
+    "    \n",
+    "    ngrok_toggler = NgrokToggler(name='exposing', \n",
+    "                                 start_cmd=ngrok+' http 5000 --region eu', \n",
+    "                                 url='http://127.0.0.1:4040',\n",
+    "                                 wait_time=1.0)\n",
+    "    display(ngrok_toggler.hbox)"
    ]
   },
   {
@@ -136,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
