--- a/rest.ipynb
+++ b/rest.ipynb
@@ -107,14 +107,13 @@
     "        # get public urls by querying ngrok api\n",
     "        response = urlopen(self.url+'/api/tunnels')\n",
     "        jdict = json.load(response)\n",
-    "        # 1st tunnel is http, 2nd tunnel is https\n",
-    "        url = jdict['tunnels'][1]['public_url']\n",
+    "        url = jdict['tunnels'][0]['public_url']\n",
     "        return url + server_endpoint\n",
     "    \n",
     "if on_aiidalab:\n",
     "    \n",
     "    ngrok_toggler = NgrokToggler(name='exposing', \n",
-    "                                 start_cmd=ngrok+' http 5000 --region eu', \n",
+    "                                 start_cmd=ngrok+' http 5000 --region eu --bind-tls true', \n",
     "                                 url='http://127.0.0.1:4040',\n",
     "                                 wait_time=1.0)\n",
     "    display(ngrok_toggler.hbox)"
